fix: showpage layout breaking and navbar

--- a/app/assets/stylesheets/components/_top-navbar.scss
+++ b/app/assets/stylesheets/components/_top-navbar.scss
@@ -24,10 +24,6 @@
 
 }
 
-.overall-wrapper{
-  background: rgba(40,40,40,0.9);
-}
-
 .index-content h3{
   color: white;
   // font-weight: bold;
